--- a/base.css
+++ b/base.css
@@ -11,7 +11,6 @@ body {
     width: 1200px;
     display: flex;
     margin: 0 auto;
-    background-color: aquamarine;
 }
 .main {
     display: flex;
@@ -20,19 +19,23 @@ body {
 }
 .menu {
     width: 15%;
-    background-color: aqua;
+    background-color: rgb(88, 88, 88);
     padding: 10px 20px 0px;
 }
 .header {
-    background-color: rgb(5, 108, 108);
+    background-color: rgb(255, 255, 255);
     min-height: 150px;
 }
 .content {
-    background-color: white;
+    
     min-height: 300px;
     padding: 20px;
 }
 .footer {
-    background-color: rgb(99, 56, 240);
+    background-color: rgb(255, 255, 255);
     min-height: 150px;
+}
+.img {
+    border-radius: 5px;
+    opacity: 0.7;
 }
